--- a/css/styles.css
+++ b/css/styles.css
@@ -1287,6 +1287,70 @@ a.active {
   transition: all .3s ease-out;
 }
 
+.project-container{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin: 0 auto;
+  max-width: 1000px;
+  height: 100vh;
+}
+
+.project-grid{
+  display: grid;
+  grid-template-columns: repeat(1, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+
+.project{
+  position: relative;
+  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  background-color: #fff;
+  margin-bottom: 20px;
+  margin: auto;
+}
+
+.project-info{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.project-info h1{
+  font-size: 2.5rem;
+  margin: 0;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  z-index: 9999;
+}
+
+.project-image{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: auto;
+  z-index: 999;
+}
+
 @media (max-width:1024px) {
 
   .header-text {
