--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ a.active {
 
 .nav a:nth-child(3) + a:after{
   font-family: 'Noto Sans', sans-serif;
-  content: 'DEMOS';
+  content: 'PROJECTS';
 }
 
 .nav a:nth-child(4) + a:after{
@@ -1289,7 +1289,7 @@ a.active {
 
 .project-container{
   display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-template-columns: repeat(1, minmax(300px, 1fr));
   grid-gap: 20px;
   margin: 0 auto;
   max-width: 1000px;
@@ -1349,6 +1349,12 @@ a.active {
   background-repeat: no-repeat;
   margin: auto;
   z-index: 999;
+}
+
+.profile-grid{
+  color: white;
+  height: 100vh;
+  box-shadow: inset 0 0 20px rgba(0,0,0,0.1);
 }
 
 @media (max-width:1024px) {
